revise 10 discussion, draft reflexivity

--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,21 @@
   langid = {american}
 }
 
+@article{alburyGenderConsolidatedCriteria2021,
+  title = {Gender in the Consolidated Criteria for Reporting Qualitative Research ({{COREQ}}) Checklist},
+  author = {Albury, Charlotte and Pope, Catherine and Shaw, Sara and Greenhalgh, Trisha and Ziebland, Sue and Martin, Sam and Rai, Tanvi and Chisholm, Alison and Barnes, Rebecca and White, Ashley and Wanat, Marta and Santillo, Marta and Boylan, Anne-marie and Tremblett, Madeline and {Tonkin-crine}, Sarah and Borek, Aleksandra and Sanders, Ruth and Koutoukidis, Dimitrios and Scragg, Jadine and Lee, Charlotte and Russell, Siabhainn and Mikulak, Magdalena and Logan, Mary and Spratt, Tanisha and {Livingston-banks}, Jonathan and Mcniven, Abigall and Stepney, Melissa and Talbot, Amelia and Crocker, Joanna and Powell, John and Paparini, Sara and {Van der westhuizen}, Helene-mari and Walumbe, Jackie and Newhouse, Nicola and Ryan, Sara and Webb, Helena and Mellor, Katie and Potter, Caroline and Butler, Ailsa and Pilbeam, Caitlin},
+  year = {2021},
+  month = oct,
+  journal = {International Journal for Quality in Health Care},
+  volume = {33},
+  number = {4},
+  pages = {mzab123},
+  issn = {1353-4505},
+  doi = {10.1093/intqhc/mzab123},
+  urldate = {2023-08-08},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Albury et al_2021_Gender in the consolidated criteria for reporting qualitative research (COREQ).pdf}
+}
+
 @article{allisonComprehensiveFrameworkEvaluate2019,
   title = {A {{Comprehensive Framework}} to {{Evaluate Websites}}: {{Literature Review}} and {{Development}} of {{GoodWeb}}},
   shorttitle = {A {{Comprehensive Framework}} to {{Evaluate Websites}}},
@@ -514,6 +529,23 @@
   file = {/Users/james/Zotero/storage/B2H6QN6B/Glasziou et al. - 2014 - Reducing waste from incomplete or unusable reports.pdf;/Users/james/Zotero/storage/9L4CDWIA/fulltext.html}
 }
 
+@article{glasziouReducingWasteIncomplete2014a,
+  title = {Reducing Waste from Incomplete or Unusable Reports of Biomedical Research},
+  author = {Glasziou, Paul and Altman, Douglas G. and Bossuyt, Patrick and Boutron, Isabelle and Clarke, Mike and Julious, Steven and Michie, Susan and Moher, David and Wager, Elizabeth},
+  year = {2014},
+  month = jan,
+  journal = {The Lancet},
+  volume = {383},
+  number = {9913},
+  pages = {267--276},
+  publisher = {{Elsevier}},
+  issn = {0140-6736, 1474-547X},
+  doi = {10.1016/S0140-6736(13)62228-X},
+  urldate = {2023-08-08},
+  langid = {english},
+  pmid = {24411647}
+}
+
 @misc{Guideline,
   title = {Guideline},
   urldate = {2023-01-10},
@@ -675,6 +707,24 @@
   isbn = {978-1-4129-6390-9},
   langid = {english},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/M.Given_2008_The SAGE Encyclopedia of Qualitative Research Methods.pdf}
+}
+
+@article{macleodBiomedicalResearchIncreasing2014,
+  title = {Biomedical Research: Increasing Value, Reducing Waste},
+  shorttitle = {Biomedical Research},
+  author = {Macleod, Malcolm R. and Michie, Susan and Roberts, Ian and Dirnagl, Ulrich and Chalmers, Iain and Ioannidis, John P. A. and Salman, Rustam Al-Shahi and Chan, An-Wen and Glasziou, Paul},
+  year = {2014},
+  month = jan,
+  journal = {The Lancet},
+  volume = {383},
+  number = {9912},
+  pages = {101--104},
+  publisher = {{Elsevier}},
+  issn = {0140-6736, 1474-547X},
+  doi = {10.1016/S0140-6736(13)62329-6},
+  urldate = {2023-08-08},
+  langid = {english},
+  pmid = {24411643}
 }
 
 @article{macleodMDARMaterialsDesign2021,
