begin drafting introduction

--- a/references.bib
+++ b/references.bib
@@ -598,6 +598,29 @@
   file = {/Users/james/Zotero/storage/SGNNWIW8/Jin et al. - 2018 - Does the medical literature remain inadequately de.pdf}
 }
 
+@article{jonesWhyReportingQuality2019a,
+  title = {Why Is Reporting Quality Improvement so Hard? {{A}} Qualitative Study in Perioperative Care},
+  shorttitle = {Why Is Reporting Quality Improvement so Hard?},
+  author = {Jones, Emma Leanne and {Dixon-Woods}, Mary and Martin, Graham P.},
+  year = {2019},
+  month = jul,
+  journal = {BMJ Open},
+  volume = {9},
+  number = {7},
+  pages = {e030269},
+  publisher = {{British Medical Journal Publishing Group}},
+  issn = {2044-6055, 2044-6055},
+  doi = {10.1136/bmjopen-2019-030269},
+  urldate = {2023-08-11},
+  abstract = {Objectives Quality improvement (QI) may help to avert or mitigate the risks of suboptimal care, but it is often poorly reported in the healthcare literature. We aimed to identify the influences on reporting QI in the area of perioperative care, with a view to informing improvements in reporting QI across healthcare. Design Qualitative interview study. Setting Healthcare and academic organisations in Australia, Europe and North America. Participants Stakeholders involved in or influencing the publication, writing or consumption of reports of QI studies in perioperative care. Results Forty-two participants from six countries took part in the study. Participants included 15 authors (those who write QI reports), 12 consumers of QI reports (practitioners who apply QI research in practice), 11 journal editors and 4 authors of reporting guidelines. Participants identified three principal challenges in achieving high-quality QI reporting. First, the broad scope of QI reporting\textemdash ranging from small local projects to multisite research across different disciplines\textemdash causes uncertainty about where QI work should be published. Second, context is fundamental to the success of a QI intervention but is difficult to report in ways that support replication and development. Third, reporting is adversely affected by both proximal influences (such as lack of time to write up QI) and more distal, structural influences (such as norms about the format and content of biomedical research reporting), leading to incomplete reporting of QI findings. Conclusions Divergent terminology and understandings of QI, along with existing reporting norms and the challenges of capturing context adequately yet succinctly, make for challenges in reporting QI. We offer suggestions for improvement.},
+  chapter = {Surgery},
+  copyright = {\textcopyright{} Author(s) (or their employer(s)) 2019. Re-use permitted under CC BY. Published by BMJ.. This is an open access article distributed in accordance with the Creative Commons Attribution 4.0 Unported (CC BY 4.0) license, which permits others to copy, redistribute, remix, transform and build upon this work for any purpose, provided the original work is properly cited, a link to the licence is given, and indication of whether changes were made. See: https://creativecommons.org/licenses/by/4.0/.},
+  langid = {english},
+  pmid = {31345983},
+  keywords = {publishing,qualitative,quality improvement,reporting},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Jones et al_2019_Why is reporting quality improvement so hard.pdf}
+}
+
 @article{karadagoncelKnowledgeAwarenessOptimal2018a,
   title = {Knowledge and Awareness of Optimal Use of Reporting Guidelines in Paediatricians: {{A}} Cross-Sectional Study},
   shorttitle = {Knowledge and Awareness of Optimal Use of Reporting Guidelines in Paediatricians},
@@ -1120,6 +1143,23 @@
   file = {/Users/james/Zotero/storage/AP2W5V6L/Rader T. et al_2014_Methods for documenting systematic review searches.pdf;/Users/james/Zotero/storage/5FVELKCL/jrsm.html}
 }
 
+@article{ramirezf.danielMethodologicalRigorPreclinical2017,
+  title = {Methodological {{Rigor}} in {{Preclinical Cardiovascular Studies}}},
+  author = {{Ramirez F. Daniel} and {Motazedian Pouya} and {Jung Richard G.} and {Di Santo Pietro} and {MacDonald Zachary D.} and {Moreland Robert} and {Simard Trevor} and {Clancy Aisling A.} and {Russo Juan J.} and {Welch Vivian A.} and {Wells George A.} and {Hibbert Benjamin}},
+  year = {2017},
+  month = jun,
+  journal = {Circulation Research},
+  volume = {120},
+  number = {12},
+  pages = {1916--1926},
+  publisher = {{American Heart Association}},
+  doi = {10.1161/CIRCRESAHA.117.310628},
+  urldate = {2020-11-21},
+  abstract = {Rationale:Methodological sources of bias and suboptimal reporting contribute to irreproducibility in preclinical science and may negatively affect research translation. Randomization, blinding, sample size estimation, and considering sex as a biological variable are deemed crucial study design elements to maximize the quality and predictive value of preclinical experiments.Objective:To examine the prevalence and temporal patterns of recommended study design element implementation in preclinical cardiovascular research.Methods and Results:All articles published over a 10-year period in 5 leading cardiovascular journals were reviewed. Reports of in vivo experiments in nonhuman mammals describing pathophysiology, genetics, or therapeutic interventions relevant to specific cardiovascular disorders were identified. Data on study design and animal model use were collected. Citations at 60 months were additionally examined as a surrogate measure of research impact in a prespecified subset of studies, stratified by individual and cumulative study design elements. Of 28\,636 articles screened, 3396 met inclusion criteria. Randomization was reported in 21.8\%, blinding in 32.7\%, and sample size estimation in 2.3\%. Temporal and disease-specific analyses show that the implementation of these study design elements has overall not appreciably increased over the past decade, except in preclinical stroke research, which has uniquely demonstrated significant improvements in methodological rigor. In a subset of 1681 preclinical studies, randomization, blinding, sample size estimation, and inclusion of both sexes were not associated with increased citations at 60 months.Conclusions:Methodological shortcomings are prevalent in preclinical cardiovascular research, have not substantially improved over the past 10 years, and may be overlooked when basing subsequent studies. Resultant risks of bias and threats to study validity have the potential to hinder progress in cardiovascular medicine as preclinical research often precedes and informs clinical trials. Stroke research quality has uniquely improved in recent years, warranting a closer examination for interventions to model in other cardiovascular fields.},
+  keywords = {\_tablet},
+  file = {/Users/james/Zotero/storage/8HVYK5VN/Ramirez F. Daniel et al_2017_Methodological Rigor in Preclinical Cardiovascular Studies.pdf;/Users/james/Zotero/storage/RKUHUF93/CIRCRESAHA.117.html}
+}
+
 @article{rethlefsenPRISMASExtensionPRISMA2021,
   title = {{{PRISMA-S}}: An Extension to the {{PRISMA}} Statement for Reporting Literature Searches in Systematic Reviews},
   shorttitle = {{{PRISMA-S}}},
@@ -1262,6 +1302,24 @@
   langid = {english},
   keywords = {\_tablet},
   file = {/Users/james/Zotero/storage/BN2EJTND/Skivington et al_2021_A new framework for developing and evaluating complex interventions.pdf;/Users/james/Zotero/storage/SXGWNL75/Skivington et al_2021_A new framework for developing and evaluating complex interventions.pdf;/Users/james/Zotero/storage/BH2YWW3R/bmj.html}
+}
+
+@article{smythNaturalHistoryConducting2015,
+  title = {The Natural History of Conducting and Reporting Clinical Trials: Interviews with Trialists},
+  shorttitle = {The Natural History of Conducting and Reporting Clinical Trials},
+  author = {Smyth, Rebecca MD and Jacoby, Ann and Altman, Douglas G. and Gamble, Carrol and Williamson, Paula R.},
+  year = {2015},
+  month = jan,
+  journal = {Trials},
+  volume = {16},
+  number = {1},
+  pages = {16},
+  issn = {1745-6215},
+  doi = {10.1186/s13063-014-0536-6},
+  urldate = {2023-08-11},
+  abstract = {To investigate the nature of the research process as a whole, factors that might influence the way in which research is carried out, and how researchers ultimately report their findings.},
+  keywords = {Equipoise,Interviews,Qualitative,Recruitment,Research reporting,Trial protocols,Trialists},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Smyth et al_2015_The natural history of conducting and reporting clinical trials.pdf}
 }
 
 @misc{stmassociationSTMGlobalBrief,
@@ -1466,4 +1524,21 @@
   abstract = {It starts with a website. Build on a platform that gives you the freedom to create, design, and grow online exactly the way you want.},
   howpublished = {https://www.wix.com},
   langid = {english}
+}
+
+@article{ziemannPoorReportingQuality2022,
+  title = {Poor Reporting Quality of Observational Clinical Studies Comparing Treatments of {{COVID-19}} \textendash{} a Retrospective Cross-Sectional Study},
+  author = {Ziemann, Sebastian and Paetzolt, Irina and Gr{\"u}{\ss}er, Linda and Coburn, Mark and Rossaint, Rolf and Kowark, Ana},
+  year = {2022},
+  month = jan,
+  journal = {BMC Medical Research Methodology},
+  volume = {22},
+  number = {1},
+  pages = {23},
+  issn = {1471-2288},
+  doi = {10.1186/s12874-021-01501-9},
+  urldate = {2023-08-11},
+  abstract = {During the COVID-19 pandemic, the scientific world is in urgent need for new evidence on the treatment of COVID patients. The reporting quality is crucial for transparent scientific publication. Concerns of data integrity, methodology and transparency were raised. Here, we assessed the adherence of observational studies comparing treatments of COVID 19 to the STROBE checklist in 2020.},
+  keywords = {COVID-19,Observational studies,Reporting quality,STROBE statement},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Ziemann et al_2022_Poor reporting quality of observational clinical studies comparing treatments.pdf}
 }
